@@ -1,21 +1,21 @@
 package it.polito.se2.g04.thesismanagement.application;
 
+import it.polito.se2.g04.thesismanagement.attachment.AttachmentRepository;
 import it.polito.se2.g04.thesismanagement.email.EmailService;
 import it.polito.se2.g04.thesismanagement.proposal.*;
+import it.polito.se2.g04.thesismanagement.student.Student;
 import it.polito.se2.g04.thesismanagement.student.StudentDTO;
+import it.polito.se2.g04.thesismanagement.student.StudentRepository;
 import it.polito.se2.g04.thesismanagement.student.StudentService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
-
-import it.polito.se2.g04.thesismanagement.attachment.AttachmentRepository;
-import it.polito.se2.g04.thesismanagement.student.Student;
-import it.polito.se2.g04.thesismanagement.student.StudentRepository;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,7 +29,6 @@ public class ApplicationServiceImpl implements ApplicationService {
 
     @Override
     public List<ApplicationDTO> getApplicationsByProf(String profEmail) {
-
         return applicationRepository
                 .getApplicationByProposal_Supervisor_Email(profEmail)
                 .stream().map(it -> {
@@ -51,29 +50,20 @@ public class ApplicationServiceImpl implements ApplicationService {
 
     @Override
     public List<ApplicationDTO> getApplicationsByStudent(String studentEmail) {
-        return applicationRepository
-                .getApplicationByStudentEmail(studentEmail)
-                .stream().map(it -> {
-                    ApplicationDTO dto = new ApplicationDTO();
-                    dto.setId(it.getId());
-                    dto.setProposalId(it.getProposal().getId());
-                    dto.setProposalTitle(it.getProposal().getTitle());
-                    dto.setSupervisorName(it.getProposal().getSupervisor().getName());
-                    dto.setSupervisorSurname(it.getProposal().getSupervisor().getSurname());
-                    dto.setStatus(it.getStatus());
-                    return dto;
-                }).toList();
+        List<Application> toReturn = applicationRepository.getApplicationByStudentEmail(studentEmail)
+                .stream().filter(it->it.getStatus()!=ApplicationStatus.DELETED).collect(Collectors.toList());
+        return toReturn.stream().map(it -> {
+            ApplicationDTO dto = new ApplicationDTO();
+            dto.setId(it.getId());
+            dto.setProposalId(it.getProposal().getId());
+            dto.setProposalTitle(it.getProposal().getTitle());
+            dto.setSupervisorName(it.getProposal().getSupervisor().getName());
+            dto.setSupervisorSurname(it.getProposal().getSupervisor().getSurname());
+            dto.setStatus(it.getStatus());
+            return dto;
+        }).collect(Collectors.toList());
     }
 
-
-    /**
-     * This method returns all applications that belong to the given proposal id. If authenticationNeeded is true,
-     * the applications are only returned if the logged-in user is a supervisor or co supervisor of the given proposal.
-     * Otherwise, an error is thrown.
-     *
-     * @param proposalId id of the proposal, of which the applications should be returned
-     * @return List of applications to the given proposal
-     */
     @Override
     public List<ApplicationDTO> getApplicationsByProposal(Long proposalId) {
         if (!proposalRepository.existsById(proposalId)) {
@@ -81,16 +71,20 @@ public class ApplicationServiceImpl implements ApplicationService {
         }
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
         String profEmail = auth.getName();
-        if (proposalRepository.getReferenceById(proposalId).getSupervisor().getEmail().compareTo(profEmail) == 0) {
+        Proposal proposal=proposalRepository.getReferenceById(proposalId);
+        if (proposal.getSupervisor().getEmail().compareTo(profEmail) == 0 &&  proposal.getStatus()!= Proposal.Status.DELETED) {
             return applicationRepository
                     .getApplicationByProposal_Id(proposalId)
-                    .stream().map(it -> getApplicationDTO(it)).toList();
+                    .stream().filter(it-> it.getStatus()!=ApplicationStatus.DELETED).map(this::getApplicationDTO).toList();
         }
         throw new ProposalOwnershipException("Specified proposal id is not belonging to user: " + profEmail);
     }
 
     @Override
     public ApplicationDTO getApplicationById(Long applicationId) {
+        if(applicationRepository.getApplicationById(applicationId).getStatus()==ApplicationStatus.DELETED){
+            throw new ApplicationDeletedException("this application is flagged to be deleted");
+        }
         return getApplicationDTO(applicationRepository.getApplicationById(applicationId));
     }
 
@@ -114,10 +108,13 @@ public class ApplicationServiceImpl implements ApplicationService {
     public boolean acceptApplicationById(Long applicationId) {
         try {
             Application application = getApplicationByIdOriginal(applicationId);
+            Proposal proposal = proposalRepository.getReferenceById(application.getProposal().getId());
             if (application.getStatus() != ApplicationStatus.PENDING)
                 return false;
             application.setStatus(ApplicationStatus.ACCEPTED);
+            proposal.setStatus(Proposal.Status.ACCEPTED);
             application = applicationRepository.save(application);
+            proposalRepository.save(proposal);
             emailService.notifyStudentOfApplicationDecision(application);
             return rejectApplicationsByProposal(application.getProposal().getId(), applicationId)
                     && rejectApplicationsByStudent(application.getStudent().getEmail(), applicationId);
@@ -131,13 +128,15 @@ public class ApplicationServiceImpl implements ApplicationService {
         try {
             Authentication auth = SecurityContextHolder.getContext().getAuthentication();
             Student loggedUser = studentRepository.getStudentByEmail(auth.getName());
+            if(proposalRepository.getReferenceById(applicationDTO.getProposalId()).getStatus()!= Proposal.Status.ACTIVE){
+                throw new ProposalNotActiveException("this proposal is not active");
+            }
             Application toSave = new Application(loggedUser, attachmentRepository.getReferenceById(applicationDTO.getAttachmentId()), applicationDTO.getApplyDate(), proposalRepository.getReferenceById(applicationDTO.getProposalId()));
             Application saved = applicationRepository.save(toSave);
             emailService.notifySupervisorAndCoSupervisorsOfNewApplication(saved);
         } catch (Exception ex) {
             throw new ApplicationBadRequestFormatException("The request field are null or the ID are not present in DB");
         }
-
     }
 
     @Override
